--- a/Discord/.env
+++ b/Discord/.env
@@ -1,3 +1,4 @@
 # .env
 DISCORD_TOKEN=OTc5Mzk4OTgyODcyNzU2MjQ2.Gxx1d7.Yt6gYTkgQs2ViuqLr5rsA9yJ55M6fnld0exVP0
 SPOON_DISCORD_TOKEN=OTc5NzIzOTA5NzM1ODA1MDM4.G8NsRq.xGcJdYPkFm7PFcHPFK07bbbTUrgMcDpIzayFzs
+MORB_DISCORD_TOKEN=OTc5ODA3MDUwNjIyMTc3Mjgx.GOcBtx.lIDzLtIGAupugWMtxyV0kvlDH60d_bA5tk1EEw
