--- a/Discord/.env
+++ b/Discord/.env
@@ -1,4 +1,4 @@
 # .env
 DISCORD_TOKEN=OTc5Mzk4OTgyODcyNzU2MjQ2.Gxx1d7.Yt6gYTkgQs2ViuqLr5rsA9yJ55M6fnld0exVP0
-SPOON_DISCORD_TOKEN=OTc5NzIzOTA5NzM1ODA1MDM4.G8NsRq.xGcJdYPkFm7PFcHPFK07bbbTUrgMcDpIzayFzs
+SPOON_DISCORD_TOKEN=OTc5NzIzOTA5NzM1ODA1MDM4.Glx_ex.QGgGu8kOJFd19iCw91KMOg4sYCxDwklnH0F30I
 MORB_DISCORD_TOKEN=OTc5ODA3MDUwNjIyMTc3Mjgx.GOcBtx.lIDzLtIGAupugWMtxyV0kvlDH60d_bA5tk1EEw
