Testing .env changes

--- a/Discord/.env
+++ b/Discord/.env
@@ -1,4 +1,4 @@
 # .env
 DISCORD_TOKEN=OTc5Mzk4OTgyODcyNzU2MjQ2.Gxx1d7.Yt6gYTkgQs2ViuqLr5rsA9yJ55M6fnld0exVP0
-SPOON_DISCORD_TOKEN=OTc5NzIzOTA5NzM1ODA1MDM4.G_4HI-.l4-EZRt6zy4ikMrNOyevnls4p2V5r3MthexJWY
+SPOON_DISCORD_TOKEN=test
 MORB_DISCORD_TOKEN=OTc5ODA3MDUwNjIyMTc3Mjgx.GOcBtx.lIDzLtIGAupugWMtxyV0kvlDH60d_bA5tk1EEw
